[package]
name = "wookie"
version = "0.2.0"
description = "A very small and fast executor for one Future for your tests and benches."
keywords = ["async", "futures", "executor", "no-std"]
categories = ["asynchronous", "concurrency", "no-std"]
authors = ["James Laver <james.laver@gmail.com>"]
homepage = "https://github.com/irrustible/wookie"
repository = "https://github.com/irrustible/wookie"
documentation = "https://docs.rs/wookie"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[dependencies]
pin-project-lite = "0.2.7"

[dev-dependencies]
futures-micro = "0.5"

