[package]
name = "wookie"
version = "0.3.0"
description = "Single future stepping executors for test suites and benchmarking. no-std compatible."
keywords = ["async", "futures", "executor", "no-std", "stepping"]
categories = ["asynchronous", "concurrency", "no-std"]
authors = ["James Laver <james.laver@gmail.com>"]
homepage = "https://github.com/irrustible/wookie"
repository = "https://github.com/irrustible/wookie"
documentation = "https://docs.rs/wookie"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[features]
default = ["alloc"]
alloc = []

[dependencies]
dummy-waker="1"
pin-project-lite = "0.2.7"
