[package]
name = "wookie"
version = "0.3.2"
description = "Async test/bench toolkit including single stepping executors. No-std compatible."
keywords = ["async", "futures", "executor", "testing", "stepping"]
categories = ["asynchronous", "concurrency", "development-tools::testing", "no-std"]
authors = ["James Laver <james.laver@gmail.com>"]
homepage = "https://github.com/irrustible/wookie"
repository = "https://github.com/irrustible/wookie"
documentation = "https://docs.rs/wookie"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[package.metadata]
msrv = "1.51.0"

[features]
default = ["alloc"]
alloc = []

[dependencies]
dummy-waker="1"
pin-project-lite = "0.2.7"
